--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
   "dependencies": {
     "@prisma/client": "^6.18.0",
     "axios": "^1.13.1",
+    "file-saver": "^2.0.5",
     "next": "16.0.1",
     "react": "19.2.0",
     "react-dom": "19.2.0",
-    "tailwind": "^4.0.0"
+    "tailwind": "^4.0.0",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
